// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateAction throw when the caller is not a team member 1`] = `"{\\"_error\\":\\"You do not have access to team 0\\"}"`;

exports[`updateAction throws when no websocket is present 1`] = `"{\\"_error\\":\\"this must be called from a websocket\\"}"`;

exports[`updateAction updates the content of the action 1`] = `
Object {
  "action": Object {
    "content": "Updated content",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "isComplete": false,
    "sortOrder": 0,
    "teamMemberId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
}
`;

exports[`updateAction updates the sortOrder without changing updatedAt 1`] = `
Object {
  "action": Object {
    "content": "Test Action[0]",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "isComplete": false,
    "sortOrder": 2,
    "teamMemberId": 2,
    "updatedAt": 2017-01-01T07:00:00.000Z,
    "userId": 1,
  },
}
`;

exports[`updateAction updates the status of the action 1`] = `
Object {
  "action": Object {
    "content": "Test Action[0]",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "isComplete": true,
    "sortOrder": 0,
    "teamMemberId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
}
`;

exports[`updateAction updates the teamMemberId of the action (in meeting only) 1`] = `
Object {
  "action": Object {
    "content": "Test Action[0]",
    "createdAt": 2017-01-01T06:59:59.999Z,
    "createdBy": 1,
    "id": 0,
    "isComplete": false,
    "sortOrder": 0,
    "teamMemberId": 2,
    "updatedAt": 2017-01-01T08:00:00.000Z,
    "userId": 1,
  },
}
`;
